<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">
    <string name="app_name">English Words Notifications</string>
    <string name="about_app">About app</string>
    <string name="accept">Accept</string>
    <string name="add_multiple_words">Add multiple words</string>
    <string name="add_to_own_category">Add to own category</string>
    <string name="add_word">Add word</string>
    <string name="all_words">All words</string>
    <string name="alphabetical_name">Alphabetical name</string>
    <string name="alphabetical_translate">Alphabetical translate</string>
    <string name="already_know">Already know</string>
    <string name="android_version_7_required">Available at Android 7.0 version or above</string>
    <string name="another_operation">Another operation</string>
    <string name="answer">Answer</string>
    <string name="answer_exercise">Answer: %s</string>
    <string name="app_info">App info</string>
    <string name="app_language">App language</string>
    <string name="app_theme">App theme</string>
    <string name="apply">Apply</string>
    <string name="answer_correct">Correct answer</string>
    <string name="answer_incorrect">Incorrect answer</string>
    <string name="background_start">Background starting</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_check">Cancel check</string>
    <string name="category_own_not_selected">Category not selected. Firstly, add words to "Own category"</string>
    <string name="change_account_text">You login with another account. The dictionary will be cleared.</string>
    <string name="check_all">Check all</string>
    <string name="check_learned_words">Check learned words</string>
    <string name="close">Close</string>
    <string name="common">Common</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_and_continue">Confirm and continue</string>
    <string name="correct">Correct!</string>
    <string name="correct_answer">Correct answer</string>
    <string name="delete">Delete</string>
    <string name="delimiter_should_not_be_empty">Delimiter should not be empty</string>
    <string name="delimiters_should_be_different">Delimiters should be different</string>
    <string name="dictionary">Dictionary</string>
    <string name="do_you_really_want_to_logout">Do you really want to exit?</string>
    <string name="do_you_really_want_to_delete_words">Do you really want to delete words?</string>
    <string name="do_you_really_want_to_off_notifications">Do you really want disable notifications?</string>
    <string name="duration_not_show">with duration</string>
    <string name="edit">Edit</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_notifications_warning">Please, enable notifications</string>
    <string name="enable_notification_translation_input">Enable notification translation input</string>
    <string name="enable_secondary_progress">Enable secondary progress</string>
    <string name="end">End</string>
    <string name="english_at_russian">Word-translation</string>
    <string name="enter_name">Enter the name</string>
    <string name="enter_translation">Enter translation</string>
    <string name="error_category_select">Error category select</string>
    <string name="error_initialization">Initialization error</string>
    <string name="error_name">Invalid name, please, try again</string>
    <string name="error_own_word_add">Error add word in Won category</string>
    <string name="error_own_word_exists">Error, world already added</string>
    <string name="error_own_word_limit">Error, own words limit (max 200)</string>
    <string name="error_own_word_incorrect">Error, incorrect word</string>
    <string name="error_own_word_delete">Error delete word from own category</string>
    <string name="error_purchase">Purchase error, write to for.gamer.develop@gmail.com</string>
    <string name="error_push_token">Push token error, please, try to restart app</string>
    <string name="error_rating_not_load">Rating has not loaded</string>
    <string name="error_request">Error send request, please, check authorization and Internet connection</string>
    <string name="error_test_notification">Error request test notification</string>
    <string name="error_text_time">Wrong time</string>
    <string name="error_update">Error update</string>
    <string name="error_word_voice">Error word voice: %s</string>
    <string name="exercises">Exercises</string>
    <string name="expand_to_see_buttons">Expand to see buttons</string>
    <string name="false_answer">False</string>
    <string name="feedback_is_empty">Feedback is empty</string>
    <string name="feedback_send_error">Feedback send error</string>
    <string name="feedback_too_short">Feedback too short</string>
    <string name="filter">Filter</string>
    <string name="hide">Hide</string>
    <string name="hide_off_notifications_warning">Hide off notifications warning</string>
    <string name="hours_off_time">Hours (0–23)</string>
    <string name="i_not_know_it">I don`t know</string>
    <string name="i_know_it">I know it</string>
    <string name="if_notifications_not_receive">If you do not receive notifications</string>
    <string name="is_old_navigation_design">Old navigation design</string>
    <string name="is_show_voice_input">Show voice input</string>
    <string name="incorrect">Incorrect</string>
    <string name="incorrect_answer">Incorrect answer</string>
    <string name="information">Information</string>
    <string name="input_your_message">Input your message</string>
    <string name="hear_answer">Play answer if incorrect (translation-word)</string>
    <string name="later">Later</string>
    <string name="learn_language">Learn language</string>
    <string name="learned">Learned!</string>
    <string name="list">List</string>
    <string name="listening_training">Listening training</string>
    <string name="load_your_dictionary">Load saved dictionary</string>
    <string name="loading">Loading</string>
    <string name="logout">Logout</string>
    <string name="logout_error">Logout error</string>
    <string name="logout_success">Logout success</string>
    <string name="main">Main</string>
    <string name="memorize">Memorize</string>
    <string name="mixed">Mixed</string>
    <string name="need_enable_secondary_progress">Need to enable word secondary progress</string>
    <string name="need_subscription_desc">Sorry, you need to have premium account</string>
    <string name="new_categories">New</string>
    <string name="new_version">New version</string>
    <string name="network_not_available">Network error</string>
    <string name="next">Next</string>
    <string name="night_time">Night time (without notifications)</string>
    <string name="night_time_value">From %1$s to %2$s</string>
    <string name="no">No</string>
    <string name="no_exercises">Notifications with exercises have not received yet. Please select exercise category and wait</string>
    <string name="no_thanks">No, thanks / already</string>
    <string name="no_training_category_words">There are not enough category words for training, need minimum 5 (probably it already learned words)</string>
    <string name="no_training_words">There are no words for training or it already learned or it is all the sentences</string>
    <string name="no_words">Notifications with new words have not received yet. Please, authorize and wait… (With default settings wait 1 hour)</string>
    <string name="no_words_default">Notifications with new words have not received yet. Please wait or try to use test notifications in Notifications section</string>
    <string name="no_words_for_load">No words for load</string>
    <string name="no_words_for_save">No words for save</string>
    <string name="no_words_know">You have not learned words in dictionary</string>
    <string name="no_words_own">You have not added words to your category yet</string>
    <string name="no_words_recognized">No words recognized</string>
    <string name="no_test_notifications">There are no test notifications</string>
    <string name="no_translation">Translation not found</string>
    <string name="not_show_notifications">Don`t show notifications beginning with (24-hour clock, the number from 0 to 23)</string>
    <string name="notification_categories">Notification categories</string>
    <string name="notification_learn_points">Notification learn points</string>
    <string name="notification_learn_points_desc">Increasing progress by:</string>
    <string name="notifications_language">Notifications language</string>
    <string name="notifications_not_receiving_enable">Notifications is not receiving, please enable it</string>
    <string name="notifications_not_receiving_authorize">Notifications is not receiving, please sign in</string>
    <string name="notifications_view">Notifications view</string>
    <string name="notifications">Notifications</string>
    <string name="one_more">One more</string>
    <string name="ok">OK</string>
    <string name="or_select_from_exists">Or select own category from exists</string>
    <string name="other">Other</string>
    <string name="own_categories">Own categories</string>
    <string name="own_category">Own category</string>
    <string name="own_words">Own words</string>
    <string name="own_words_statistic">Own words statistic</string>
    <string name="parse_desc">You need copy and paste words into the frame below to add multiple words in the dictionary.
        Also you need to fill delimiter between translation and transcription and delimiter between words. Adding transcription is not necessary</string>
    <string name="parsed_words">Parsed words</string>
    <string name="paste_multiple_words">Copy and paste multiple words here</string>
    <string name="please_authorize">Please, sign in</string>
    <string name="please_wait">Please, wait</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_in_sentence">Privacy Policy</string>
    <string name="progress_swapped">Words progress swapped</string>
    <string name="purchase_consumed">Success purchase, thank you!</string>
    <string name="rate_app">Rate app</string>
    <string name="remove_from_own_category">Remove from own category</string>
    <string name="reset_progress">Reset progress</string>
    <string name="search_words">Search words</string>
    <string name="select">Select</string>
    <string name="training">Training</string>
    <string name="translation_transcription_delimiter">Translation, transcription delimiter</string>
    <string name="words_delimiter">Words delimiter</string>
    <string name="label_fragment_dictionary" translatable="false">LabelFragmentDictionary</string>
    <string name="label_fragment_notifications" translatable="false">LabelFragmentNotifications</string>
    <string name="label_fragment_settings" translatable="false">LabelFragmentSettings</string>
    <string name="text_enter_name">
        Enter the name, which will display in the rating table of learned words. The name should be not shorter than 3 symbols, contains only characters or numbers, starts with character. You can enter name when open app again if you don`t do that now.
    </string>
    <string name="every_1_hour">Every hour (premium account required)</string>
    <string name="every_2_hours">Every 2 hours (premium account required)</string>
    <string name="every_3_hours">Every 3 hours (premium account required)</string>
    <string name="every_4_hours">Every 4 hours</string>
    <string name="every_5_hours">Every 5 hours</string>
    <string name="every_6_hours">Every 6 hours</string>
    <string name="every_7_hours">Every 7 hours</string>
    <string name="every_8_hours">Every 8 hours</string>
    <string name="privacy_policy_text">Clicked authorize, you agree to our Privacy Policy</string>
</resources>