<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item_menu_search_dictionary_exercises"
          android:title="@string/search_words"
          android:icon="@drawable/ic_search"
          app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/item_menu_check"
          android:title="@string/select"
          app:showAsAction="collapseActionView|ifRoom"
          android:icon="@drawable/ic_check"/>

    <item android:id="@+id/item_menu_check_all"
          android:title="@string/check_all"
          app:showAsAction="collapseActionView|ifRoom"
          android:icon="@drawable/ic_check_all"
          android:visible="false"/>

    <item android:id="@+id/item_menu_delete"
          android:title="@string/delete"
          app:showAsAction="collapseActionView|ifRoom"
          android:icon="@drawable/ic_delete_white"
          android:visible="false"/>

    <item android:id="@+id/item_menu_cancel_check"
          android:title="@string/cancel_check"
          app:showAsAction="collapseActionView|ifRoom"
          android:icon="@drawable/ic_close"
          android:visible="false"/>

    <item android:id="@+id/item_menu_filter"
          android:title="@string/filter"
          app:showAsAction="collapseActionView|ifRoom"
          android:icon="@drawable/ic_filter"/>

</menu>