<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@id/fragmentDictionaryAll"
          android:title="@string/dictionary"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_dictionary"/>

    <item android:id="@id/fragmentTrainingSetting"
          android:title="@string/training"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_training"/>

    <item android:id="@id/fragmentNotifications"
          android:title="@string/notifications"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_notification"/>

    <item android:id="@id/fragmentSettings"
          android:title="@string/common"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_settings"/>

</menu>