<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation_graph"
            app:startDestination="@id/fragmentDictionary">

    <fragment android:id="@+id/fragmentDictionary"
              android:name="relaxeddd.pushenglish.ui.dictionary.FragmentDictionary"
              android:label="@string/label_fragment_dictionary"
              tools:layout="@layout/fragment_dictionary"/>

    <fragment android:id="@+id/fragmentNotifications"
              android:name="relaxeddd.pushenglish.ui.notifications.FragmentNotifications"
              android:label="@string/label_fragment_notifications"/>

    <fragment android:id="@+id/fragmentSettings"
              android:name="relaxeddd.pushenglish.ui.settings.FragmentSettings"
              android:label="@string/label_fragment_settings"/>

</navigation>