<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/view_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/size_42">

            <TextView
                android:id="@+id/text_parse_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parse_desc"
                android:layout_marginTop="@dimen/size_12"
                android:layout_marginHorizontal="@dimen/size_12"/>

            <LinearLayout
                android:id="@+id/container_parse_delimiters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_8"
                android:layout_marginHorizontal="@dimen/size_12"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/container_text_parse_delimiter_inner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/size_8"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_parse_delimiter_inner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/text_color_main"
                        android:textSize="@dimen/font_11"
                        android:hint="@string/translation_transcription_delimiter"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/container_text_parse_delimiter_words"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/size_8"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_parse_delimiter_words"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/text_color_main"
                        android:textSize="@dimen/font_11"
                        android:hint="@string/words_delimiter"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_text_parse"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_240"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/size_12"
                android:layout_marginHorizontal="@dimen/size_12">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_parse_words"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/text_color_main"
                    android:gravity="top"
                    android:hint="@string/paste_multiple_words"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_text_parse_own_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_marginHorizontal="@dimen/size_12"
                android:layout_marginTop="@dimen/size_8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_own_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_main"
                    android:singleLine="true"
                    android:maxLength="200"
                    android:hint="@string/own_category"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_parse_own_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_select_from_exists"
                android:layout_marginStart="@dimen/size_12"
                android:layout_marginEnd="@dimen/size_12"
                android:layout_marginTop="@dimen/size_8"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_parse_own_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/view_item_category"/>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
